# dev-manager-mcp

./: Cargo.toml  README.md
.github/workflows/: pre-release.yml  publish.yml
npx-cli/: README.md  package-lock.json  package.json
scripts/: README.md  manual-release.sh
src/: lib.rs  log_buffer.rs  main.rs  manager.rs  port_allocator.rs  server_entry.rs  service.rs
