[package]
name = "dev-manager-mcp"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "dev-manager-mcp"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
rmcp = { version = "0.8", features = ["server", "client", "transport-sse-server", "transport-sse-client-reqwest", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
schemars = "1.0.4"
rand = "0.8"
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
